// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic: mount 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

<styleSheetSerializerspec__Wrapper>
  <section
    className="c0"
  >
    <styleSheetSerializerspec__Title>
      Hello World, this is my first styled component!
    </styleSheetSerializerspec__Title>
  </section>
</styleSheetSerializerspec__Wrapper>
`;

exports[`basic: shallow 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

<section
  className="c0"
>
  <styleSheetSerializerspec__Title>
    Hello World, this is my first styled component!
  </styleSheetSerializerspec__Title>
</section>
`;
